# sherlock

./: .env.local  .gitignore  AUTHORS.md  Cargo.toml  Makefile  PAPER.md  feature_engineering.py  graph.py  main.py  metric_extraction.py  reqirements.txt  requirements.txt
misc/: viz.py
src/graph/: Cargo.toml  algorithms.rs  csv.rs  graph.rs  lib.rs  main.rs  progress.rs  types.rs
src/synthesizer/: Cargo.toml  analysis.ipynb  main.rs  psql.py  script.sh
src/synthesizer /: main.rs  script.sh
src/synthesizer /scripts/: distribution_metrics.sql  temporal_dynamics.sql
src/synthesizer/scripts/: misc.sql  relational_structure.sql
synthesizer/: Cargo.toml
synthesizer/src/: main.rs
