[package]
name = "sherlock-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19"

[[bin]]
name = "graph-tool"
path = "src/graph/main.rs"

[[bin]]
name = "synth-tool"
path = "src/synthesizer/main.rs"