[package]
name = "rust_synthesizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
